# security_camera_rpi

./: .gitignore  Makefile  README.md  docker-compose.yml  print_cam_info.py  start_raspi_wifi.sh  test_screen.py
conf_files/: nvr
dhcp_docker/: README.md
dhcp_docker/data/: dhcpd.conf  dhcpd.leases~
hardware_control_docker/: Cargo.toml  Dockerfile  README.md  hardware_control.sh
hardware_control_docker/.cargo/: config
hardware_control_docker/src/: button_handler.rs  disk_monitor.rs  led_control.rs  main.rs  oled_display.rs
hostapd_docker/: Dockerfile  README.md
hostapd_docker/confs/: interfaces  start.sh
hostapd_docker/confs/hostapd_confs/: wpa2.conf
ntp_docker/: Dockerfile
ntp_docker/conf/: chrony.conf
