[package]
name = "hardware_control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
spidev = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }