[package]
name = "hardware_control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
linux-embedded-hal = "0.3.2"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
gpio-cdev = { version="0.5.1", features=["async-tokio"] }
spidev = "0.5.1"
futures = "0.3.19"
sysinfo = "0.23.2"
display-interface-spi = "0.4.1"
openssl = { version = "0.10.38", features = ["vendored"] }